<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rebus-Klient</string>
    <string name="welcome">Welcome to Rebus</string>
    <string name="textButtonLogin">Login</string>
    <string name="textButtonFreePlay">Free Play</string>
    <string name="textLogin">Login</string>
    <string name="textUserName">UserName</string>
    <string name="textPassword">Password</string>
    <string name="textButtonSubmit">Submit</string>
    <string name="textButtonRun">Run this Rebus</string>
    <string name="logsFile">logsFile</string>
    <string name="exit"> android vs apple </string>
    <string name="enterpin">picture pin</string>
    <string name="textpositiveButton">OK</string>
    <string name="textnegativeButton">Cancel</string>
    <string name="menuHelp">Point Help</string>
    <string name="menuDistance">Distance to Point</string>
    <string name="menuExit">Exit</string>
    <string name="menuCoordinates">Your Coordinates</string>
    <string name="timesFile">timesFile</string>
    

</resources>